implemented make offer functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -223,3 +223,17 @@ div.card-body.user-panel {
    border-radius: 0px;
    border: #212f3f;
 }
+
+.input-symbol-euro {
+  position: relative;
+}
+.input-symbol-euro input {
+   padding-right: 18px;
+   height: 40px;
+}
+.input-symbol-euro:after {
+   position: absolute;
+   top: 0;
+   content: "€";
+   right: 5px;
+}
