implemented W6-008 user story and added comments

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,3 +237,8 @@ div.card-body.user-panel {
    content: "€";
    right: 5px;
 }
+
+button.btn.btn-danger {
+   border-radius: 0px;
+   margin-top: 10px;
+}
