--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,9 @@
 /* ===========================================
-    Project: Blog post in php
+    Project: Webshop
     Default Theme
     ------------------------------------------
-    Fonts: Raleway & Open Sans
+    Fonts: Roboto
     ------------------------------------------
-    Colors:
-      Black:                    #000
 =========================================== */
 
 /* ===========================================
@@ -29,49 +27,49 @@ body {
 }
 
 .space-top {
-  margin-top: 3.8rem;
+   margin-top: 3.8rem;
 }
 
 /* ===========================================
     Navigation
 ===========================================*/
 nav.navbar {
-  color: #000;
-  font-weight: 700;
-  box-shadow: 0 8px 6px -9px #999;
+   color: #000;
+   font-weight: 700;
+   box-shadow: 0 8px 6px -9px #999;
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link {
-  color: #febd6a;
-  text-transform: uppercase;
+   color: #febd6a;
+   text-transform: uppercase;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #ffffff;
+   color: #ffffff;
 }
 
 a.navbar-brand {
-  font-size: 185%;
+   font-size: 185%;
 }
 
 .navbar-light .navbar-brand {
-    color: #ffbb58;
+   color: #ffbb58;
 }
 
 i.fab.fa-blogger {
-  color: teal;
+   color: teal;
 }
 
 .bg-dark {
-    background-color: #232f3e!important;
+   background-color: #232f3e!important;
 }
 /* ===========================================
     Webshop page
 ===========================================*/
 .jumbotron {
-    padding: 1rem 2rem;
-    border-radius: 0px;
+   padding: 1rem 2rem;
+   border-radius: 0px;
 }
 
 .display-3 {
@@ -88,8 +86,9 @@ h1.display-3 span {
 }
 
 img.header-img {
-      width: 60%;
+   width: 60%;
 }
+
 .card {
    border: 1px solid #bac0c3;
    border-radius: 0px;
@@ -102,12 +101,12 @@ img.header-img {
 }
 
 .btn-primary {
-    color: #febd6a;
-    background-color: #232f3e;
-    border-color: #232f3e;
-    border-radius: 0px;
-    font-weight: 700;
-    text-transform: uppercase;
+   color: #febd6a;
+   background-color: #232f3e;
+   border-color: #232f3e;
+   border-radius: 0px;
+   font-weight: 700;
+   text-transform: uppercase;
 }
 
 .footer-social-media {
@@ -126,17 +125,18 @@ footer ul li i {
 }
 
 .form_error span {
-  width: 100%;
-  height: 35px;
-  font-size: 90%;
-  color: #D83D5A;
+   width: 100%;
+   height: 35px;
+   font-size: 90%;
+   color: #D83D5A;
 }
+
 .form_error input {
-  border: 1px solid #D83D5A;
+   border: 1px solid #D83D5A;
 }
 
 .mb-4, .my-4 {
-    margin-bottom: 0.5rem!important;
+   margin-bottom: 0.5rem!important;
 }
 
 /* ===========================================
@@ -147,7 +147,7 @@ footer ul li i {
 }
 
 i.login-icon {
-    font-size: 260%;
+   font-size: 260%;
 }
 
 .login-form h2 {
@@ -157,7 +157,7 @@ i.login-icon {
 
 .login-card {
    text-align: center;
-    margin-top: 4rem;
+   margin-top: 4rem;
 }
 
 #login input {
@@ -225,12 +225,14 @@ div.card-body.user-panel {
 }
 
 .input-symbol-euro {
-  position: relative;
+   position: relative;
 }
+
 .input-symbol-euro input {
    padding-right: 18px;
    height: 40px;
 }
+
 .input-symbol-euro:after {
    position: absolute;
    top: 0;
